--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -19,10 +19,12 @@
     "@acme/db": "workspace:*",
     "@acme/validators": "workspace:*",
     "@t3-oss/env-nextjs": "^0.10.0",
+    "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "next": "^14.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
