--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "packageManager": "pnpm@9.0.6",
   "scripts": {
+    "beautify": "turbo beautify",
     "build": "turbo build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
