--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
+    "beautify": "biome format ./src --write",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
