--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,6 +23,7 @@
 		"with-env": "dotenv -e ../../.env --"
 	},
 	"dependencies": {
+		"@neondatabase/serverless": "^0.9.1",
 		"@t3-oss/env-core": "^0.10.1",
 		"drizzle-orm": "^0.30.4",
 		"zod": "^3.23.0"
