--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,12 +18,19 @@
 		"@acme/api": "workspace:*",
 		"@acme/db": "workspace:*",
 		"@acme/validators": "workspace:*",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "^0.10.0",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"geist": "^1.3.0",
+		"lucide-react": "^0.378.0",
 		"next": "^14.2.0",
+		"next-themes": "^0.3.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
 		"zod": "^3.23.0"
 	},
