--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,10 +18,15 @@
 		"@acme/api": "workspace:*",
 		"@acme/db": "workspace:*",
 		"@acme/validators": "workspace:*",
+		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-progress": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "^0.10.0",
+		"@uploadthing/react": "^6.5.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"geist": "^1.3.0",
@@ -30,8 +35,10 @@
 		"next-themes": "^0.3.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-dropzone": "^14.2.3",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
+		"uploadthing": "^6.10.1",
 		"zod": "^3.23.0"
 	},
 	"devDependencies": {
