--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -24,6 +24,7 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "^0.10.0",
 		"@uploadthing/react": "^6.5.1",
