--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@acme/server",
+	"name": "@soulmate/server",
 	"version": "1.0.50",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
@@ -10,11 +10,10 @@
 	},
 	"dependencies": {
 		"@elysiajs/cors": "^1.0.2",
-		"elysia": "latest",
-		"ulid": "^2.3.0"
+		"elysia": "latest"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.7.2",
+		"@biomejs/biome": "^1.7.2",
 		"bun-types": "latest"
 	},
 	"module": "src/index.js"
