--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@acme/db",
+	"name": "@soulmate/db",
 	"version": "0.1.0",
 	"private": true,
 	"type": "module",
@@ -29,8 +29,8 @@
 		"zod": "^3.23.0"
 	},
 	"devDependencies": {
-		"@acme/tsconfig": "workspace:*",
-		"@biomejs/biome": "1.7.2",
+		"@soulmate/tsconfig": "workspace:*",
+		"@biomejs/biome": "^1.7.2",
 		"dotenv-cli": "^7.4.1",
 		"drizzle-kit": "^0.20.14",
 		"typescript": "^5.4.5"
