--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@acme/validators",
+	"name": "@soulmate/validators",
 	"private": true,
 	"version": "0.1.0",
 	"type": "module",
@@ -15,17 +15,18 @@
 		"dev": "tsc --watch",
 		"clean": "rm -rf .turbo node_modules",
 		"typecheck": "tsc --noEmit --emitDeclarationOnly false",
-
 		"format": "biome format ./src",
 		"lint": "biome lint src",
 		"beautify": "biome format ./src --write"
 	},
 	"dependencies": {
+		"@soulmate/db": "workspace:*",
+		"drizzle-zod": "^0.5.1",
 		"zod": "^3.23.0"
 	},
 	"devDependencies": {
-		"@acme/tsconfig": "workspace:*",
-		"@biomejs/biome": "1.7.2",
+		"@biomejs/biome": "^1.7.2",
+		"@soulmate/tsconfig": "workspace:*",
 		"typescript": "^5.4.5"
 	}
 }
