add partykit and final sync replicache

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -11,13 +11,10 @@
 		"with-env": "dotenv -e ../../.env --",
 		"typecheck": "tsc --noEmit",
 		"format": "biome format ./src",
-		"lint": "biome lint src",
+		"lint": "biome lint ./src",
 		"beautify": "biome format ./src --write"
 	},
 	"dependencies": {
-		"@soulmate/api": "workspace:*",
-		"@soulmate/db": "workspace:*",
-		"@soulmate/validators": "workspace:*",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -26,6 +23,9 @@
 		"@radix-ui/react-progress": "^1.0.3",
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@soulmate/api": "workspace:*",
+		"@soulmate/db": "workspace:*",
+		"@soulmate/validators": "workspace:*",
 		"@t3-oss/env-nextjs": "^0.10.0",
 		"@uploadthing/react": "^6.5.1",
 		"class-variance-authority": "^0.7.0",
@@ -34,18 +34,21 @@
 		"lucide-react": "^0.378.0",
 		"next": "^14.2.0",
 		"next-themes": "^0.3.0",
+		"partysocket": "^1.0.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-dropzone": "^14.2.3",
+		"replicache": "^14.2.2",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
 		"uploadthing": "^6.10.1",
-		"zod": "^3.23.0"
+		"zod": "^3.23.0",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.7.2",
 		"@soulmate/tailwind-config": "workspace:*",
 		"@soulmate/tsconfig": "workspace:*",
-		"@biomejs/biome": "^1.7.2",
 		"@types/node": "^20.12.5",
 		"@types/react": "^18.3.1",
 		"@types/react-dom": "^18.3.0",
