Replicache sync logic + twitter api + deploy (#7)
* server logic and a bunch debugging

* adding twitter api

* add deployment

* fix lock

* final?

* fix formatting

* fix?

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,12 +25,14 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"@soulmate/api": "workspace:*",
 		"@soulmate/db": "workspace:*",
+		"@soulmate/utils": "workspace:*",
 		"@soulmate/validators": "workspace:*",
 		"@t3-oss/env-nextjs": "^0.10.0",
 		"@uploadthing/react": "^6.5.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"geist": "^1.3.0",
+		"lodash.debounce": "^4.0.8",
 		"lucide-react": "^0.378.0",
 		"next": "^14.2.0",
 		"next-themes": "^0.3.0",
@@ -39,16 +41,18 @@
 		"react-dom": "18.3.1",
 		"react-dropzone": "^14.2.3",
 		"replicache": "^14.2.2",
+		"replicache-react": "^5.0.1",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
 		"uploadthing": "^6.10.1",
-		"zod": "^3.23.0",
+		"zod": "^3.23.6",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.7.2",
 		"@soulmate/tailwind-config": "workspace:*",
 		"@soulmate/tsconfig": "workspace:*",
+		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^20.12.5",
 		"@types/react": "^18.3.1",
 		"@types/react-dom": "^18.3.0",
