--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -21,6 +21,7 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@soulmate/api": "workspace:*",
@@ -31,15 +32,18 @@
 		"@uploadthing/react": "^6.5.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"framer-motion": "^11.1.7",
 		"geist": "^1.3.0",
 		"lodash.debounce": "^4.0.8",
 		"lucide-react": "^0.378.0",
 		"next": "^14.2.0",
 		"next-themes": "^0.3.0",
+		"nuqs": "^1.17.1",
 		"partysocket": "^1.0.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-dropzone": "^14.2.3",
+		"react-markdown": "^9.0.1",
 		"replicache": "^14.2.2",
 		"replicache-react": "^5.0.1",
 		"sonner": "^1.4.41",
